Fix navbar z-index

--- a/intranet-client/src/website/styles/_navbar.scss
+++ b/intranet-client/src/website/styles/_navbar.scss
@@ -1,5 +1,9 @@
+@import './variables';
+
 .navbar {
     position: absolute;
+    z-index: $zindex-fixed;
+
     top: 0;
     left: 0;
     right: 0;
